# todo-list-django

./: README.md  db.sqlite3  manage.py  pyproject.toml
todoapp/: settings.py  urls.py
todolist/: admin.py  models.py  views.py
todolist/migrations/: 0003_auto_20211103_2336.py
